added more structure and information

--- a/code/SVM.ipynb
+++ b/code/SVM.ipynb
@@ -5,7 +5,7 @@
    "id": "bcd4eaa5",
    "metadata": {},
    "source": [
-    "## Support Vector Machine (SVM)\n"
+    "# Support Vector Machine (SVM)\n"
    ]
   },
   {
@@ -13,7 +13,15 @@
    "id": "77c5b82c",
    "metadata": {},
    "source": [
-    "This notebook serves the purpose of computing **SVM** pipelines for macro-structural and micro-structural data."
+    "In the Data.analysis notebook Logistic Regression pipielines were computed for classifying the participants either as control or patient.This notebook is a continuation of the Data.analysis notebook and serves the purpose of computing **SVM** pipelines for macro-structural and micro-structural data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5c6d047",
+   "metadata": {},
+   "source": [
+    "## 1. What are Support Vector Machines (SVMs) ?"
    ]
   },
   {
@@ -21,12 +29,10 @@
    "id": "9c51dcc5",
    "metadata": {},
    "source": [
-    "Following the scikit-learn algorhitm cheat-sheet, for the data at hand the performance of a **linear SVM** is recommended. The data contains more than 50 participants (samples), the aim is to predict a category (control/patient) and the data is labeled. \n",
-    "\n",
     "SVMs are a set of supervised learning methods used that can be used for classifcation, regression and outliers detection (for further information click here). The basic idea is to find an optimal separating line (or hyperplane) as output that separates the data into two classes. The SVM algorithm looks for the data points that are the clostest to the line from both classes. These points are called support vectors. Then, the distance between the support vectors and the hyperplane which is called the margin is computed. To find the best and optimal hyperplane, the margin should be maximized.\n",
     "\n",
     "\n",
-    "Support vector classification(SVC) or Linear Support vector classification (LinearSVC) are methods of SVMs making it feasible to perfom a binary or mulit-class classification on a dataset. For the purpose of this project, LinearSVC is going to be performed."
+    "Support vector classification (SVC) or Linear Support vector classification (LinearSVC) are methods of SVMs making it feasible to perfom a binary or mulit-class classification on a dataset. For the purpose of this project, LinearSVC is going to be performed."
    ]
   },
   {
@@ -34,7 +40,23 @@
    "id": "016e21b1",
    "metadata": {},
    "source": [
-    "## Macro-structural data: Cortical Thickness"
+    "## 2. Macro-structural data: Cortical Thickness (CT)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "965574df",
+   "metadata": {},
+   "source": [
+    "In this section, a SVM pipeline will be computed for the macro-structual data **CT**. Firstly, the data is loaded and prepared for the analysis part. Secondly, the SVM model is built containing the analysis. Finally, we evaluate our model and have a look at how it performs. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62efb5d7",
+   "metadata": {},
+   "source": [
+    "### 2.1 Data preparation "
    ]
   },
   {
@@ -60,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "c1931bff",
    "metadata": {},
    "outputs": [],
@@ -97,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "id": "b1a375ea",
    "metadata": {},
    "outputs": [
@@ -131,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "id": "c36d144f",
    "metadata": {},
    "outputs": [
@@ -161,8 +183,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6570b0c1",
+   "metadata": {},
+   "source": [
+    "### 2.2 Building the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4daa58c3",
+   "metadata": {},
+   "source": [
+    "As in the Data.analysis notebook, as a first step the input and output data should be defined. It is analogous to the Logistic Regression input and output since it is the identical **CT** data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "id": "b992bc0c",
    "metadata": {},
    "outputs": [],
@@ -175,7 +213,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
+   "id": "701f9c4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.18 , 2.382, 2.346, ..., 3.62 , 2.776, 3.282],\n",
+       "       [2.394, 1.973, 2.534, ..., 3.588, 2.654, 3.124],\n",
+       "       [2.551, 2.567, 1.954, ..., 3.657, 2.495, 2.669],\n",
+       "       ...,\n",
+       "       [2.273, 2.559, 2.578, ..., 3.48 , 2.294, 2.571],\n",
+       "       [1.94 , 2.438, 2.272, ..., 3.187, 2.51 , 2.759],\n",
+       "       [2.108, 2.269, 2.145, ..., 3.192, 2.551, 2.855]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CT_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "8395ff0f",
    "metadata": {},
    "outputs": [
@@ -292,29 +357,30 @@
        "       [1]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "CT_data\n",
     "CT_target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "id": "58a05c6b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#split data\n",
+    "\n",
     "CT_X_train, CT_X_test, CT_y_train, CT_y_test = train_test_split(CT_data, CT_target, test_size=0.3,random_state=109)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "id": "9ece0167",
    "metadata": {},
    "outputs": [],
@@ -324,21 +390,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "f82c9e80",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "array([[0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1],\n",
+       "       [1]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,17 +518,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "8b7d06d2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(108,)"
+       "(108, 1)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "d7ed0ade",
    "metadata": {},
    "outputs": [],
@@ -380,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "5be3f8e4",
    "metadata": {},
    "outputs": [
@@ -390,7 +559,7 @@
        "(108,)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,17 +570,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "id": "5bde6a67",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mello/miniconda3/envs/neuro_ai/lib/python3.7/site-packages/sklearn/utils/validation.py:993: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "id": "113ab794",
    "metadata": {},
    "outputs": [],
@@ -432,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "id": "cd1dd7ee",
    "metadata": {},
    "outputs": [
@@ -470,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "4a712a3a",
    "metadata": {},
    "outputs": [],
@@ -483,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "df5066a4",
    "metadata": {},
    "outputs": [],
@@ -495,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "15d4a1b7",
    "metadata": {},
    "outputs": [],
@@ -507,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "f3476638",
    "metadata": {},
    "outputs": [
@@ -985,7 +1162,7 @@
        "[115 rows x 309 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "id": "7cd652cc",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "id": "539ac094",
    "metadata": {},
    "outputs": [],
@@ -1019,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "id": "8d0850ba",
    "metadata": {},
    "outputs": [],
@@ -1029,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 25,
    "id": "ab58e6d3",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1224,7 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 26,
    "id": "a6d3c575",
    "metadata": {},
    "outputs": [],
@@ -1068,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 27,
    "id": "0834e08a",
    "metadata": {},
    "outputs": [
@@ -1098,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 28,
    "id": "f14d0b87",
    "metadata": {},
    "outputs": [],
@@ -1111,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 29,
    "id": "df4de812",
    "metadata": {},
    "outputs": [],
@@ -1123,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 30,
    "id": "d04dfaea",
    "metadata": {},
    "outputs": [],
@@ -1135,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 31,
    "id": "fb748893",
    "metadata": {},
    "outputs": [],
@@ -1148,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 32,
    "id": "053a8462",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 33,
    "id": "057ead80",
    "metadata": {},
    "outputs": [],
@@ -1170,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 34,
    "id": "461ca5b8",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1365,7 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 35,
    "id": "c4afd2f5",
    "metadata": {},
    "outputs": [],
@@ -1209,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 36,
    "id": "6061b668",
    "metadata": {},
    "outputs": [
@@ -1236,6 +1413,14 @@
     "print(\"Precision:\",metrics.precision_score(FA_y_test, FA_y_pred))\n",
     "print(\"Recall:\",metrics.recall_score(FA_y_test, FA_y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bc4a6ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
