--- a/content/code/Data_analysis.ipynb
+++ b/content/code/Data_analysis.ipynb
@@ -2,60 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a966c8cb",
-   "metadata": {},
-   "source": [
-    "# Data analysis for MSc5_research_project "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6f0caba",
-   "metadata": {},
-   "source": [
-    "This jupyter notebook deals with analysing the data for my research project within the MSc05 course in the Neurocognitive Psychology lab at Goethe University Frankfurt within the psychology master degree program."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d6922c12",
-   "metadata": {},
-   "source": [
-    "Just to repeat briefly, the aim of the project is to use machine learning in order to predict whether a particpant can be classified either as control or patient with psychotic disorder based on different brain modalities. Before starting with our first modality being **cortical thickness (CT)**, the learning problem and the task type should be defined to know which model suits the best for the purpose of the project aim."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11812b4b",
-   "metadata": {},
-   "source": [
-    "## 1. Learning problem and task type"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17eea560",
-   "metadata": {},
-   "source": [
-    "Considering the task type, our purpose is to classify the samples in two categories being control and patient. Hence, the task type is **classification**. For that, I want to use the given information regarding the labels for each sample, consequently the learning problem is **supervised**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f2dd2f62",
-   "metadata": {},
-   "source": [
-    "More specifically, with the data at hand the task type is **binary classification**. **Binary classification** refers to those classification task that have two class labels (in this data set control/patient). \n",
-    "Commonly used algorithms for binary classification include **Logistic Regression, k-Nearest Neighbors, Decision Trees, Support Vector Machine and Naive Bayes** (for further information click [here](https://machinelearningmastery.com/types-of-classification-in-machine-learning/)).\n",
-    "In this project, I will focus on two algorithms being **Logistic Regression** and **Support Vector Machine**. For the latter, there is a separate notebook called **SVM**. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4fb0d430",
    "metadata": {},
    "source": [
-    "## 2. Logistic Regression"
+    "# Logistic Regression"
    ]
   },
   {
@@ -71,7 +21,7 @@
    "id": "623b534c",
    "metadata": {},
    "source": [
-    "## 2.1 Cortical Thickness (CT)"
+    "## 1.1 Cortical Thickness (CT)"
    ]
   },
   {
