--- a/_sources/code/Data_exploration.ipynb
+++ b/_sources/code/Data_exploration.ipynb
@@ -5,7 +5,7 @@
    "id": "97761504",
    "metadata": {},
    "source": [
-    "# Data exploration for MSc5_research_project "
+    "# Data exploration"
    ]
   },
   {
@@ -7029,7 +7029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.0"
   },
   "vscode": {
    "interpreter": {
