--- a/_sources/code/Data_exploration.ipynb
+++ b/_sources/code/Data_exploration.ipynb
@@ -790,11 +790,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e75fa436",
    "metadata": {},
    "source": [
-    "## 2. Exploring the different MRI metrics"
+    "# 2. Exploring the different MRI metrics"
    ]
   },
   {
@@ -1259,11 +1260,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6cc737cc",
    "metadata": {},
    "source": [
-    "### 2.1 Macro-structural data: cortical thickness (CT)"
+    "## 2.1 Macro-structural data: cortical thickness (CT)"
    ]
   },
   {
@@ -2477,7 +2479,7 @@
    "id": "e19e823a",
    "metadata": {},
    "source": [
-    "### 2.2 Micro-structural data: mean diffusivity (MD) and fractional anisotropy (FA)"
+    "## 2.2 Micro-structural data: mean diffusivity (MD) and fractional anisotropy (FA)"
    ]
   },
   {
